[package]
name = "jq-cli"
version = "0.1.0"
description = "CLI client for the on-chain job queue"
edition = "2021"

[workspace]

[[bin]]
name = "jq-cli"
path = "src/main.rs"

[[bin]]
name = "jq-sim"
path = "src/sim_main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
solana-sdk = "2.3"
solana-client = "2.3"
solana-account-decoder-client-types = "2.3"
borsh = "1"
sha2 = "0.10"
bs58 = "0.5"
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
rand = "0.8"
crossterm = "0.28"
ratatui = "0.29"
shellexpand = "3"
